# master-ai-agents

./: pyproject.toml
crew/coder/output/: code_and_output.txt
crew/coder/src/coder/: main.py
crew/indian_stock_picker/: README.md  pyproject.toml
crew/indian_stock_picker/output/: decision.md  long_term_stocks.json  short_term_stocks.json
crew/indian_stock_picker/src/indian_stock_picker/: crew.py  main.py
crew/indian_stock_picker/src/indian_stock_picker/config/: agents.yaml  tasks.yaml
crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
crew/stock_picker/src/stock_picker/: crew.py
openai/: lab_1.py  lab_2.py  lab_4.py
