[project]
name = "indian_stock_picker"
version = "0.1.0"
description = "indian_stock_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
indian_stock_picker = "indian_stock_picker.main:run"
run_crew = "indian_stock_picker.main:run"
train = "indian_stock_picker.main:train"
replay = "indian_stock_picker.main:replay"
test = "indian_stock_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
